--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="AMD项目组合管理仪表板"
+      content="AMD Project Portfolio Management Dashboard"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Dashboard</title>
   </head>
   <body>
-    <noscript>您需要启用JavaScript才能运行此应用程序。</noscript>
+    <noscript>You need to enable JavaScript to run this application.</noscript>
     <div id="root"></div>
   </body>
 </html> 
